# tidal-cli-music-player

./: .gitignore  LICENSE  README.md  pyproject.toml
tidalcli/: __init__.py  api.py  art.py  auth.py  cli.py  client.py  config.py  daemon.py  ipc.py  lyrics.py  models.py  mpris.py  player.py  tui.py
