[project]
name = "tidal-cli"
version = "0.1.0"
description = "A terminal music player for TIDAL (unofficial flow)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tidalapi>=0.7.4",   # auth (device flow) + catalog + stream URL resolution
    "python-mpv>=1.0.5", # libmpv bindings for playback
    "dbus-fast>=2.0",    # MPRIS2 on D-Bus: media keys + desktop now-playing
    "typer>=0.12",       # CLI framework
    "rich>=13.0",        # tables / colored output
    "textual>=0.60",     # full-screen TUI
    "textual-image>=0.6",  # cover art via Kitty/Sixel graphics (blocks fallback)
    "rich-pixels>=2.2",  # album art as terminal half-blocks
    "pillow>=10.0",      # image decoding for cover art
    "platformdirs>=4.0", # cross-platform config/data/state dirs
]

[project.scripts]
tidal = "tidalcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tidalcli"]
